--- a/sass/global/global.scss
+++ b/sass/global/global.scss
@@ -1,14 +1,14 @@
 body {
-    position: relative;
-    background: #fff;
-    font-size: 15px;
-    line-height: 24px;
-    font-style: normal;
-    font-weight: 400;
-    color: #444444;
-    font-family: "Open-Sans", sans-serif;
-    margin: 0;
-    padding: 0;
+  position: relative;
+  background: #fff;
+  font-size: 15px;
+  line-height: 24px;
+  font-style: normal;
+  font-weight: 400;
+  color: $dark-gray;
+  font-family: "Open-Sans", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 a {
