Methodical marking of a personal project_02

--- a/sass/normalize.scss
+++ b/sass/normalize.scss
@@ -1,7 +1,7 @@
 html {
   line-height: 1.15;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+  ms-text-size-adjust: 100%;
+  webkit-text-size-adjust: 100%;
 }
 
 body {
@@ -39,35 +39,29 @@ hr {
 }
 
 pre {
-  font-family: monospace, monospace;
+  font-family: monospace;
   font-size: 1em;
 }
 
 a {
   background-color: transparent;
-  -webkit-text-decoration-skip: objects;
+  webkit-text-decoration-skip: objects;
 }
 
 abbr[title] {
   border-bottom: none;
-  text-decoration: underline;
   text-decoration: underline dotted;
 }
 
 b,
 strong {
-  font-weight: inherit;
-}
-
-b,
-strong {
-  font-weight: bolder;
+  font-weight: inherit bolder;
 }
 
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
+  font-family: monospace;
   font-size: 1em;
 }
 
@@ -76,8 +70,8 @@ dfn {
 }
 
 mark {
-  background-color: #ff0;
-  color: #000;
+  background-color: #ffff00;
+  color: #00000000;
 }
 
 small {
@@ -138,7 +132,7 @@ button,
 html [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button;
+  webkit-appearance: button;
 }
 
 button::-moz-focus-inner,
@@ -190,17 +184,17 @@ textarea {
 }
 
 [type="search"] {
-  -webkit-appearance: textfield;
+  webkit-appearance: textfield;
   outline-offset: -2px;
 }
 
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
+  webkit-appearance: none;
 }
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
+  webkit-appearance: button;
   font: inherit;
 }
 
