--- a/sass/global/global.scss
+++ b/sass/global/global.scss
@@ -1,6 +1,6 @@
 body {
   position: relative;
-  background: #fff;
+  background: $white;
   font-size: 15px;
   line-height: 24px;
   font-style: normal;
@@ -16,6 +16,6 @@ a {
 }
 
 .main-content {
-    width: 320px;
-    margin: 0 auto;
+  width: 320px;
+  margin: 0 auto;
 }
