--- a/sass/blocks/goods-of-the-week.scss
+++ b/sass/blocks/goods-of-the-week.scss
@@ -3,6 +3,7 @@
   padding-right: 30px;
   padding-top: 29px;
   padding-bottom: 40px;
+  border: 2px solid $black;
 }
 
 .goods-of-the-week__title {
@@ -60,30 +61,4 @@
   color: $dark-gray;
   font-weight: 700;
   text-align: center;
-}
-
-.button {
-  font-size: 17px;
-  line-height: 20px;
-  font-weight: 700;
-  display: block;
-  padding-top: 14px;
-  padding-bottom: 14px;
-  color: $dark-gray;
-  text-transform: uppercase;
-  background-color: $white;
-  border: 2px solid $dark-gray;
-  text-align: center;
-  cursor: pointer;
-
-  &:hover,
-  &:focus {
-    background-color: $dark-gray;
-    color: $white;
-  }
-
-  & :active {
-    background-color: $dark-gray;
-    color: rgba(255, 255, 255, 0.3);
-  }
 }
