--- a/sass/blocks/about-us.scss
+++ b/sass/blocks/about-us.scss
@@ -1,7 +1,6 @@
 .about-us {
   padding-left: 30px;
   padding-right: 30px;
-  border: 2px solid $black;
 }
 
 .about-us__title {
@@ -40,5 +39,70 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .about-us {
+    width: 668px;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-bottom: 38px;
+  }
+
+  .about-us__title {
+    font-size: 44px;
+    line-height: 50px;
+  }
+
+  .about-us__list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .about-us__item {
+    width: 50%;
+    margin-bottom: 41px;
+    font-size: 20px;
+    line-height: 22px;
+    padding-top: 72px;
+  }
+
+  .about-us__item--money {
+    order: 3;
+  }
+
+  .about-us__item--heart {
+    order: 5;
+  }
+
+  .about-us__item--clew {
+    order: 2;
+  }
+
+  .about-us__item--rocket {
+    order: 4;
+  }
+
+  .about-us__item--gift {
+    order: 6;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .about-us {
+    width: 875px;
+    padding-left: 225px;
+  }
+
+  .about-us__title {
+    font-size: 56px;
+    line-height: 57px;
+    padding-top: 36px;
+  }
+
+  .about-us__item {
+    width: 40%;
   }
 }
