--- a/sass/blocks/catalog.scss
+++ b/sass/blocks/catalog.scss
@@ -1,5 +1,18 @@
 .catalog {
   margin: 0 auto;
   padding: 0 30px;
-  border: 2px solid $black;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog {
+    padding: 0 50px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
