--- a/sass/blocks/comments.scss
+++ b/sass/blocks/comments.scss
@@ -2,7 +2,6 @@
   padding-left: 30px;
   padding-right: 30px;
   padding-bottom: 50px;
-  border: 2px solid $black;
 }
 
 .comments__title {
@@ -71,5 +70,94 @@
 
   &:active {
     opacity: 0.3;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .comments {
+    width: 668px;
+    padding-left: 50px;
+    padding-right: 50px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    padding-top: 79px;
+    padding-bottom: 125px;
+    background-image: url("../img/review@1x.jpg");
+    background-repeat: no-repeat;
+    margin-bottom: 62px;
+  }
+
+  .comments__title {
+    font-size: 43px;
+    line-height: 50px;
+    order: 1;
+    margin-bottom: 45px;
+  }
+
+  .comments__item {
+    order: 3;
+    margin-bottom: 0;
+    width: 668px;
+  }
+
+  .comments__text {
+    font-size: 16px;
+    margin-bottom: 70px;
+  }
+
+  .comments__author {
+    width: 290px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .comments__controls {
+    width: 170px;
+    order: 4;
+    margin-left: auto;
+    margin-top: -61px;
+    margin-right: 3px;
+    border: none;
+    margin-bottom: 0;
+  }
+
+  .comments__write {
+    width: 175px;
+    order: 2;
+    margin-left: auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .comments {
+    width: 1050px;
+  }
+
+  .comments__title {
+    margin-left: 175px;
+  }
+
+  .comments__item {
+    width: 875px;
+    margin-left: 175px;
+  }
+
+  .comments__controls {
+    order: 4;
+    margin-left: auto;
+    border: none;
+  }
+
+  .comments__text {
+    font-size: 17px;
+    margin-bottom: 27px;
+  }
+
+  .comments__write {
+    width: 175px;
+    order: 2;
+    margin-left: auto;
   }
 }
