--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -1,6 +1,5 @@
 .intro {
   background-color: $light-gray;
-  border: 2px solid $black;
 
   &--changing-page {
     background-image: url("../img/hero-mobile@1x.jpg");
@@ -20,8 +19,81 @@
   font-weight: 700;
   text-align: center;
   margin: 0;
+}
 
-  &--changing-page {
-    padding-bottom: 120px;
+.intro__inner {
+  position: relative;
+  width: 320px;
+  height: 177px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+.intro__title--inner {
+  padding-top: 75px;
+  padding-bottom: 73px;
+  font-size: 27px;
+  line-height: 30px;
+  color: black;
+  font-weight: 700;
+  text-align: center;
+  margin: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .intro--changing-page {
+    background-image: url("../img/hero-tablet.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% -1px;
+  }
+
+  .intro__title--index-page {
+    padding-top: 160px;
+    padding-bottom: 372px;
+  }
+
+  .intro__title {
+    font-size: 43px;
+    line-height: 50px;
+    padding-bottom: 372px;
+    padding-top: 154px;
+  }
+
+  .intro__inner {
+    width: 768px;
+    height: 225px;
+    margin-bottom: 78px;
+  }
+
+  .intro__title--inner {
+    padding-top: 96px;
+    padding-bottom: 80px;
+    font-size: 43px;
+    line-height: 50px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .intro--changing-page {
+    background-image: url("../img/hero-desktop.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% -1px;
+  }
+
+  .intro__title {
+    font-size: 53px;
+    line-height: 57px;
+    padding-bottom: 358px;
+  }
+
+  .intro__inner {
+    width: 1050px;
+    height: 245px;
+    margin-bottom: 135px;
+  }
+
+  .intro__title--inner {
+    font-size: 55px;
+    line-height: 50px;
   }
 }
