--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -1,24 +1,48 @@
 .main-header {
+  position: relative;
+  display: flex;
+  flex-direction: column;
   border-bottom: 1px solid #ececec;
   width: 320px;
   margin: 0 auto;
-  border: 2px solid $black;
 }
 
-.main-header__logo {
-  display: block;
-  width: 86px;
-  margin: 0 auto;
-  padding-top: 22px;
-  padding-bottom: 22px;
-  line-height: 0;
+.main-header__toggle {
+  position: absolute;
+  right: 30px;
+  top: 33px;
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-color: transparent;
+  background-image: url("../img/icon-menu-open.svg");
+  background-repeat: no-repeat;
+  cursor: pointer;
+  outline: none;
 
-  &:hover,
-  &:focus {
-    opacity: 0.6;
+  &--closed {
+    display: none;
   }
 
-  &:active {
-    opacity: 0.3;
+  &--opened {
+    display: block;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .main-header {
+    width: 668px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .main-header__toggle {
+    display: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main-header {
+    width: 1050px;
   }
 }
