--- a/sass/blocks/order.scss
+++ b/sass/blocks/order.scss
@@ -1,11 +1,27 @@
 .order {
   margin: 0 auto;
-  padding: 0 30px;
-  border: 2px solid $black;
 }
 
 .order__title {
   margin: 0;
-  padding: 30px 0;
+  padding: 30px 30px;
   font-size: 13px;
+}
+
+@media (min-width: $tablet-width) {
+  .order__title {
+    padding-top: 0;
+    padding-bottom: 25px;
+    padding-left: 50px;
+    padding-right: 50px;
+    font-size: 17px;
+    line-height: 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .order__title {
+    padding-left: 225px;
+    padding-right: 225px;
+  }
 }
