--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -1,12 +1,36 @@
 .page-footer {
+  background-color: $light-gray;
+}
+
+.page-footer__inner {
   padding-left: 30px;
   padding-right: 30px;
   width: 260px;
   margin: 0 auto;
   background-color: $light-gray;
-  border: 2px solid $black;
 }
 
 .page-footer__item {
   padding: 25px 28px;
+}
+
+@media (min-width: $tablet-width) {
+  .page-footer__inner {
+    width: 668px;
+    padding-right: 50px;
+    padding-left: 50px;
+    display: flex;
+    align-items: center;
+  }
+
+  .page-footer__item {
+    width: 33%;
+    padding: 51px 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-footer__inner {
+    width: 1050px;
+  }
 }
