--- a/sass/blocks/product.scss
+++ b/sass/blocks/product.scss
@@ -64,3 +64,67 @@
 .product__order {
   margin-top: 28px;
 }
+
+@media (min-width: $tablet-width) {
+  .product {
+    display: flex;
+    margin-bottom: 43px;
+  }
+
+  .product__photo {
+    width: 60%;
+  }
+
+  .product__description {
+    width: 50%;
+  }
+
+  .product__link {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .product__about {
+    padding-bottom: 15px;
+    font-size: 15px;
+    border: none;
+    margin-bottom: 160px;
+  }
+
+  .product__price {
+    border-top: 1px solid $light-gray;
+    padding-top: 21px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .product {
+    flex-direction: column;
+    width: 316px;
+    margin-bottom: 57px;
+  }
+
+  .product__photo {
+    width: 100%;
+    height: 462px;
+  }
+
+  .product__description {
+    flex-grow: 1;
+    width: 260px;
+    height: 138px;
+  }
+
+  .product__about {
+    margin-bottom: 25px;
+  }
+
+  .product__about--text {
+    margin: 0;
+    padding: 0;
+  }
+
+  .product__order {
+    margin-top: 15px;
+  }
+}
