--- a/sass/blocks/social.scss
+++ b/sass/blocks/social.scss
@@ -1,3 +1,32 @@
 .social {
+  padding-top: 48px;
+  padding-bottom: 22px;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
   border-bottom: 1px solid #e5e5e5;
+}
+
+.social__item--instagram {
+  width: 20px;
+  height: 21px;
+}
+
+.social__item--facebook {
+  width: 15px;
+  height: 29px;
+}
+
+.social__item--twitter {
+  width: 20px;
+  height: 21px;
+}
+
+@media (min-width: $tablet-width) {
+  .social {
+    border: none;
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 16px;
+  }
 }
