--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,3 +27,5 @@
 @import "./blocks/social";
 @import "./blocks/user-list";
 @import "./blocks/process";
+@import "./blocks/sale-list";
+@import "./blocks/footer-logo";
