--- a/sass/blocks/about-us.scss
+++ b/sass/blocks/about-us.scss
@@ -1,30 +1,33 @@
 .about-us {
-  padding-left: 30px;
-  padding-right: 30px;
+  margin-bottom: 56px;
 }
 
 .about-us__title {
   margin: 0;
   padding: 0;
-  font-size: 25px;
+  font-size: 26px;
   line-height: 30px;
   color: $black;
   font-weight: 700;
   margin-bottom: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .about-us__list {
   margin: 0;
   padding: 0;
   list-style: none;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .about-us__item {
-  font-size: 17px;
+  font-size: 18.3px;
   line-height: 20px;
   font-weight: 700;
   position: relative;
-  padding-top: 57px;
+  padding-top: 55px;
   margin-bottom: 28px;
   color: $black;
 
@@ -42,6 +45,48 @@
   }
 }
 
+.about-us__icon--eco {
+  position: absolute;
+  top: 0;
+  left: 8px;
+  fill: $light-green;
+}
+
+.about-us__icon--money {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  fill: $light-green;
+}
+
+.about-us__icon--heart {
+  position: absolute;
+  top: 6px;
+  left: 8px;
+  fill: $light-green;
+}
+
+.about-us__icon--clew {
+  position: absolute;
+  top: 3px;
+  left: 4px;
+  fill: $light-green;
+}
+
+.about-us__icon--rocket {
+  position: absolute;
+  top: 5px;
+  left: -6px;
+  fill: $light-green;
+}
+
+.about-us__icon--gift {
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  fill: $light-green;
+}
+
 @media (min-width: $tablet-width) {
   .about-us {
     width: 668px;
@@ -53,12 +98,14 @@
   .about-us__title {
     font-size: 44px;
     line-height: 50px;
+    padding: 0;
   }
 
   .about-us__list {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    padding: 0;
   }
 
   .about-us__item {
@@ -66,7 +113,32 @@
     margin-bottom: 41px;
     font-size: 20px;
     line-height: 22px;
-    padding-top: 72px;
+    padding-top: 71px;
+    letter-spacing: 1px;
+  }
+
+  .about-us__icon--eco {
+    top: 16px;
+  }
+
+  .about-us__icon--money {
+    top: 17px;
+  }
+
+  .about-us__icon--heart {
+    top: 21px;
+  }
+
+  .about-us__icon--clew {
+    top: 19px;
+  }
+
+  .about-us__icon--rocket {
+    top: 20px;
+  }
+
+  .about-us__icon--gift {
+    top: 17px;
   }
 
   .about-us__item--money {
