--- a/sass/blocks/copyright.scss
+++ b/sass/blocks/copyright.scss
@@ -1,7 +1,15 @@
 .copyright {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .copyright__text {
@@ -11,11 +19,24 @@
   line-height: 18px;
   color: $black;
   font-weight: 700;
+  margin-right: 33px;
+  margin-bottom: 13px;
+}
+
+.copyright__logo {
+  fill: $light-green;
 }
 
 @media (min-width: $tablet-width) {
+  .copyright {
+    padding-top: 60px;
+  }
+
   .copyright__text {
-    margin-left: 48px;
+    margin-left: auto;
+    font-size: 20px;
+    margin-bottom: 13px;
+    margin-right: 30px;
   }
 }
 
