--- a/sass/blocks/footer-logo.scss
+++ b/sass/blocks/footer-logo.scss
@@ -5,5 +5,19 @@
 @media (min-width: $tablet-width) {
   .footer-logo {
     display: block;
+
+    &:hover .footer-logo__image,
+    &:focus .footer-logo__image {
+      fill: $light-green;
+    }
+
+    &:active .footer-logo__image {
+      opacity: 0.3;
+    }
+  }
+
+  .footer-logo__image {
+    width: 102px;
+    height: 34px;
   }
 }
