--- a/sass/blocks/goods-of-the-week.scss
+++ b/sass/blocks/goods-of-the-week.scss
@@ -2,10 +2,13 @@
   display: flex;
   margin: 0 auto;
   flex-direction: column;
+  padding-top: 29px;
+  margin-bottom: 69px;
+}
+
+.goods-of-the-week__heading {
   padding-left: 30px;
   padding-right: 30px;
-  padding-top: 29px;
-  padding-bottom: 40px;
 }
 
 .goods-of-the-week__title {
@@ -16,6 +19,14 @@
   color: $black;
   font-weight: 700;
   margin-bottom: 5px;
+  letter-spacing: 1px;
+}
+
+.goods-of-the-week__about {
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 16px;
+  padding-top: 3px;
 }
 
 .goods-of-the-week__subtitle {
@@ -32,16 +43,16 @@
 .goods-of-the-week__description {
   margin: 0;
   padding: 0;
-  margin-bottom: 14px;
+  margin-bottom: 17px;
 }
 
 .goods-of-the-week__table {
   width: 100%;
-  margin-bottom: 28px;
+  margin-bottom: 24px;
 }
 
 .goods-of-the-week__table td {
-  padding-top: 7px;
+  padding-top: 6px;
   padding-bottom: 7px;
   padding-right: 25px;
   border-bottom: 1px solid $light-gray;
@@ -59,10 +70,15 @@
   margin: 0;
   padding: 0;
   margin-bottom: 26px;
-  font-size: 17px;
+  font-size: 18px;
   color: $dark-gray;
   font-weight: 700;
   text-align: center;
+}
+
+.goods-of-the-week__to-order {
+  width: 256px;
+  margin: auto;
 }
 
 @media (min-width: $tablet-width) {
@@ -70,7 +86,7 @@
     width: 668px;
     padding-left: 50px;
     padding-right: 50px;
-    padding-top: 35px;
+    padding-top: 48px;
     padding-bottom: 70px;
     flex-direction: row;
     flex-wrap: wrap;
@@ -84,30 +100,49 @@
     flex-direction: row;
     align-items: flex-end;
     margin-bottom: 52px;
+    padding: 0;
   }
 
   .goods-of-the-week__title {
-    font-size: 45px;
+    font-size: 43px;
     line-height: 50px;
     margin: 0;
+    letter-spacing: 1.4px;
   }
 
   .goods-of-the-week__subtitle {
     width: 85px;
-    margin-left: 151px;
+    margin-left: 145px;
     text-align: center;
     font-size: 17px;
     line-height: 18px;
     margin-bottom: 3px;
   }
 
+  .goods-of-the-week__description {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 35px;
+    font-size: 18px;
+    line-height: 29px;
+  }
+
   .goods-of-the-week__about {
     width: 290px;
+    padding: 0;
   }
 
   .goods-of-the-week__table {
     width: 100%;
     margin-bottom: 28px;
+  }
+
+  .goods-of-the-week__table td {
+    padding-right: 0;
+  }
+
+  .goods-of-the-week__to-order {
+    width: 285px;
   }
 
   .goods-of-the-week__image {
@@ -122,8 +157,9 @@
   }
 
   .goods-of-the-week__price {
-    margin-bottom: 36px;
-    font-size: 19px;
+    margin-bottom: 34px;
+    font-size: 21px;
+    padding-top: 3px;
   }
 }
 
@@ -136,17 +172,19 @@
 
   .goods-of-the-week__heading {
     width: 700px;
-    margin-top: -600px;
+    margin-top: -580px;
   }
 
   .goods-of-the-week__title {
-    font-size: 57px;
+    font-size: 54px;
     line-height: 57px;
+    letter-spacing: 1.5px;
+    padding-left: 4px;
   }
 
   .goods-of-the-week__subtitle {
     order: -1;
-    margin: 0 40px 0 40px;
+    margin: 0 40px 9px 40px;
   }
 
   .goods-of-the-week__about {
@@ -154,9 +192,9 @@
   }
 
   .goods-of-the-week__description {
-    margin-bottom: 45px;
+    margin-bottom: 51px;
     font-size: 18px;
-    line-height: 32px;
+    line-height: 28px;
   }
 
   .goods-of-the-week__table {
