--- a/sass/blocks/modal-form.scss
+++ b/sass/blocks/modal-form.scss
@@ -1,3 +1,65 @@
+.modal-form {
+  width: 260px;
+  margin: auto;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 35px;
+  padding-bottom: 45px;
+  background-color: $white;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
+}
+
+.modal__title {
+  font-size: 25px;
+  line-height: 30px;
+  color: $black;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.modal-form__title {
+  font-size: 15px;
+  line-height: 30px;
+  text-align: center;
+}
+
+.modal-form__sizes {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.modal-form__input {
+  display: none;
+}
+
+.modal-form__label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 60px;
+  padding: 16px 10px;
+  font-size: 17px;
+  line-height: 16px;
+  font-weight: 700;
+  border: 2px solid $light-gray;
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    border-color: #c7c7c7;
+  }
+
+  &:active {
+    border-color: $light-green;
+  }
+}
+
+.modal-form__input:checked + .modal-form__label {
+  border-color: $light-green;
+}
+
 .modal-form__button {
   width: 100%;
   background-color: $light-green;
