--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -1,10 +1,12 @@
 .modal {
-  width: 260px;
-  margin: 0 auto;
-  padding-left: 30px;
-  padding-right: 30px;
-  border: 2px solid $black;
   display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: $white;
+  z-index: 10000;
 }
 
 .modal__title {
