--- a/sass/blocks/product.scss
+++ b/sass/blocks/product.scss
@@ -1,6 +1,6 @@
 .product {
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: 28px;
   border: 1px solid $light-gray;
 }
 
@@ -15,7 +15,7 @@
 }
 
 .product__description {
-  padding: 30px 28px;
+  padding: 27px 26px;
 
   &:hover,
   &:focus {
@@ -28,10 +28,10 @@
 }
 
 .product__link {
-  margin-bottom: 18px;
-  font-size: 17px;
+  font-size: 18px;
   color: $black;
   font-weight: 700;
+  letter-spacing: 0.2px;
 
   &:hover,
   &:focus {
@@ -48,9 +48,9 @@
 .product__about {
   margin: 0;
   padding: 0;
-  padding-bottom: 28px;
+  padding-bottom: 13px;
   font-size: 13px;
-  line-height: 30px;
+  line-height: 40px;
   border-bottom: 1px solid $light-gray;
 }
 
@@ -62,13 +62,30 @@
 }
 
 .product__order {
-  margin-top: 28px;
+  margin-top: 22px;
+  position: relative;
+}
+
+.product__icon {
+  position: absolute;
+  left: 186px;
+  top: 0;
+  fill: #d3d2d2;
+
+  &:hover,
+  &:focus {
+    fill: $light-green;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 @media (min-width: $tablet-width) {
   .product {
     display: flex;
-    margin-bottom: 43px;
+    margin-bottom: 54px;
   }
 
   .product__photo {
@@ -77,23 +94,41 @@
 
   .product__description {
     width: 50%;
+    padding: 25px 26px;
   }
 
   .product__link {
     font-size: 20px;
-    line-height: 24px;
+    line-height: 28px;
+    letter-spacing: 1.2px;
+  }
+
+  .product__link--layer3 {
+    line-height: 26px;
+    letter-spacing: 2px;
+    font-size: 18px;
   }
 
   .product__about {
     padding-bottom: 15px;
     font-size: 15px;
     border: none;
-    margin-bottom: 160px;
+    margin-bottom: 153px;
+  }
+
+  .product__about--text {
+    margin-bottom: 127px;
   }
 
   .product__price {
     border-top: 1px solid $light-gray;
-    padding-top: 21px;
+    padding-top: 22px;
+    font-size: 18px;
+  }
+
+  .product__icon {
+    left: 254px;
+    top: 23px;
   }
 }
 
@@ -112,11 +147,11 @@
   .product__description {
     flex-grow: 1;
     width: 260px;
-    height: 138px;
+    height: 146px;
   }
 
   .product__about {
-    margin-bottom: 25px;
+    margin-bottom: 15px;
   }
 
   .product__about--text {
@@ -125,6 +160,14 @@
   }
 
   .product__order {
-    margin-top: 15px;
+    margin-top: 7px;
+  }
+
+  .product__price {
+    padding-top: 22px;
+  }
+
+  .product__icon {
+    left: 237px;
   }
 }
