--- a/sass/blocks/products.scss
+++ b/sass/blocks/products.scss
@@ -4,8 +4,8 @@
 }
 
 .products__item {
-  display: block;
-  padding: 28px 30px;
+  display: flex;
+  padding: 21px 31px;
 
   &--interior {
     background-color: $light-green;
@@ -27,6 +27,19 @@
   }
 }
 
+.products__icon {
+  margin-left: auto;
+  fill: rgba(20, 144, 128, 0.5);
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
 .products__title {
   display: block;
   width: 110px;
@@ -34,20 +47,34 @@
   line-height: 24px;
   color: $white;
   font-weight: 700;
+  padding-top: 6px;
+  letter-spacing: 1px;
 }
 
 @media (min-width: $tablet-width) {
   .products {
     flex-direction: row;
+    padding-left: 50px;
+    padding-right: 50px;
+    background: #f8f8f8;
   }
 
   .products__item {
     width: 50%;
     padding: 35px;
+    padding-bottom: 20px;
   }
 
   .products__title {
     font-size: 20px;
-    line-height: 30px;
+    line-height: 25px;
+    padding: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .products {
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
