--- a/sass/blocks/sale-list.scss
+++ b/sass/blocks/sale-list.scss
@@ -16,6 +16,17 @@
 
   .sale-list__link {
     color: $black;
+
+    &:hover,
+    &:focus {
+      color: $black;
+      opacity: 0.6;
+    }
+
+    &:active {
+      color: $black;
+      opacity: 0.3;
+    }
   }
 
   .sale-list__item--delivery {
