--- a/sass/blocks/top-menu.scss
+++ b/sass/blocks/top-menu.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  display: none;
 }
 
 .top-menu__logo {
@@ -30,6 +31,10 @@
     height: 88px;
   }
 
+  .top-menu__list {
+    display: none;
+  }
+
   .top-menu__logo {
     display: flex;
     order: 1;
@@ -43,6 +48,10 @@
 @media (min-width: $desktop-width) {
   .top-menu {
     width: 1050px;
+  }
+
+  .top-menu__list {
+    display: block;
   }
 
   .top-menu__logo {
